Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/03/05:
- TestEngine: Fixed an issue with using DockInto() from one viewport to another.

2024/02/27:
- TestEngine: Added ImGuiTestOpFlags_NoYield support to MouseTeleportToPos(), useful in
  situations where very precise timings are required (e.g. successive frames teleports).

2024/02/26:
- TestEngine: *BREAKING* fixed GetWindowByRef() behaving inconsistently by ignoring
  current SetRef() base reference when non-empty. Most functions expected on windows
  parts, such as WindowMove(), WindowResize(), WindowFocus(), WindowBringToFront(),
  ScrollToXXX(), etc. were affected:
     ctx->SetRef("Window 1"); + ctx->WindowFocus("");          // OK
     ctx->SetRef("Window 1"); + ctx->WindowFocus("//Window1"); // OK
     ctx->SetRef("window 1"); + ctx->WindowFocus("Window1");   // Not OK, previously worked.

2024/02/22:
- TestEngine: fixed MenuCheckAll(), MenuUncheckAll(), MenuActionAll() from trying to
  perform actions on disabled menu items.

2024/02/07:
- TestEngine: fixed ImBuildFindGitBranchName() helper and auto-filling of io.GitBranchName
  when using a detached head. (#42)

2024/01/25:
- TestEngine: Submitting a ImGuiKey_LeftAlt/ImGuiKey_RightAlt, ImGuiKey_LeftShift/ImGuiKey_RightShift,
  ImGuiKey_LeftCtrl/ImGuiKey_RightCtrl, ImGuiKey_LeftSuper/ImGuiKey_RightSuper key interaction
  will submit the equivalent ImGuiMod_XXX mod, as what would happen in a real backend.
- TestEngine: ...also done in the opposite direction: submitting e.g. ImGuiMod_XXX automatically
  adds ImGuiKey_LeftXXX.

2024/01/16:
- TestEngine: Fixes crash when running an ImGui instanced compiled with IMGUI_ENABLE_TEST_ENGINE
  but before a test engine has been attached to the ImGuiContext.

2024/01/15: